--- a/reddit-indicator.desktop
+++ b/reddit-indicator.desktop
@@ -3,6 +3,6 @@ Type=Application
 Encoding=UTF-8
 Name=reddit-indicator
 Comment=A panel indicator for viewing the latest Reddit News feed.
-Exec=/usr/bin/hn
+Exec=/usr/bin/reddit
 Icon=reddit.png
 Terminal=false
